trunk/NewArchive/167471d10762fc1cc539b5b427b9a5a7-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function ‘int main(int, char**)’:
main.cpp:69:37: error: cannot call constructor ‘BankAccount::BankAccount’ directly [-fpermissive]
         BankAccount::BankAccount(n,m);
                                     ^
main.cpp:69:37: error:   for a function-style cast, remove the redundant ‘::BankAccount’ [-fpermissive]
main.cpp:75:20: error: expected unqualified-id before ‘.’ token
         BankAccount.deposit(m);
                    ^
main.cpp:80:20: error: expected unqualified-id before ‘.’ token
         BankAccount.withdraw(m);
                    ^
main.cpp:84:20: error: expected unqualified-id before ‘.’ token
         BankAccount.checkBalance();               
                    ^
